2011-01-10  JMB  Fremantle image rotation, adjustable row height

    Allow fullscreen images on Fremantle (including slideshows) to
    auto-rotate with the device orientation.  Also added a preference to allow
    the data table row height to adjust to the font size on Fremantle
    (allowing more rows on the screen but making them harder to accurately tap
    with fingers).

2011-01-09  JMB  Removed row double-clicking, better Maemo backlight handling

    Removed the behavior to show the row viewer when double-clicking on a row
    in the data table; it was interacting badly with the single-click behavior
    and was only one of many ways of launching the row viewer.  The backlight
    on Maemo devices now won't dim or turn off during a slideshow.  Also made
    sure that an earlier fix for improving integer input on Fremantle PR1.2
    won't break on PR1.3.

2011-01-07  JMB  Fremantle checkbox bugfixes, cppcheck warning fixes

    Fixed some erratic checkbox functionality (especially in lists on
    Fremantle) in the columns editor, sorting editor, and view editor.  Also
    fixed a few spots in the code which triggered warnings in cppcheck.

2011-01-01  JMB  Doxygen updates, Windows build fixes

    Made some improvements to the Doxygen documentation generation process and
    content.  Fixed some bugs that crept up in the Windows build since the
    2.0 release.

2010-12-30  JMB  Decimal formatting, view model, and condition editor bugfixes

    Fixed a bug that prevented negative decimals between 0 and -1 from being
    entered, another that could sometimes trigger a crash when a row was
    edited so that it no longer passed the current filter, and a third that
    prevented the condition editor from being correctly initialized when
    starting with a condition based on an enum column.

2010-12-16  JMB  Allow boolean columns in calculations

    Boolean columns can now be used in calculations; they take the value of
    either 1 (true) or 0 (false).
