@@ -1,7 +1,7 @@
 /*
  * portabase.h
  *
- * (c) 2002-2004,2008-2010 by Jeremy Bowman <jmbowman@alum.mit.edu>
+ * (c) 2002-2004,2008-2011 by Jeremy Bowman <jmbowman@alum.mit.edu>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -113,6 +113,7 @@ private:
     QSettings *getSettings();
     void createFillerActions();
     void showAllFillerActions();
+    void updatePreferences(QSettings *settings);
 
 private:
     Database *db; /**< The currently open database, if any */
